@@ -193,6 +193,23 @@ operator|==
 literal|null
 condition|)
 continue|continue;
+name|VariableResolver
+name|resolver
+init|=
+name|context
+operator|.
+name|getVariableResolver
+argument_list|()
+decl_stmt|;
+name|fmt
+operator|=
+name|resolver
+operator|.
+name|replaceTokens
+argument_list|(
+name|fmt
+argument_list|)
+expr_stmt|;
 name|String
 name|column
 init|=
