@@ -121,7 +121,7 @@ name|DateFormatTransformer
 operator|.
 name|DATE_TIME_FMT
 argument_list|,
-literal|"MM/dd/yyyy"
+literal|"${xyz.myDateFormat}"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -189,6 +189,20 @@ argument_list|(
 literal|"e"
 argument_list|,
 name|row
+argument_list|)
+expr_stmt|;
+name|resolver
+operator|.
+name|addNamespace
+argument_list|(
+literal|"xyz"
+argument_list|,
+name|createMap
+argument_list|(
+literal|"myDateFormat"
+argument_list|,
+literal|"MM/dd/yyyy"
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|Context
